add a form to open all links in new tabs

--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Visites scolaires</title>
+    <script type="text/javascript">
+        function open_win() {
+            window.open("https://cairn.info")
+            window.open("https://gopress.be")
+            window.open("https://mediapart.fr/licence")
+            window.open("https://lemonde.fr")
+            window.open("https://archives.mondediplo.com")
+            window.open("https://pressreader.com")
+            window.open("https://academia.scopalto.com/")
+            window.open("http://www.universalis-edu.com/")
+            window.open("http://opac.provincedeliege.be")
+            window.open("https://www.provincedeliege.be/fr/node/618")
+        }
+        </script>
 </head>
 <body>
     <h1>Liste des outils pour les visites scolaires :</h1>
+    <form>
+        <input type=button value="Open links" onclick="open_win()">
+        </form>
     <ul>
         <li>
             <a href="https://cairn.info">Cairn</a>
