--- a/index.html
+++ b/index.html
@@ -19,11 +19,31 @@
             window.open("https://www.provincedeliege.be/fr/node/618")
         }
     </script>
+    <style>
+        a {
+            text-decoration: none;
+        }
+
+        .btn {
+            background-color: #E2007A;
+            color: white;
+
+            
+            border: solid #E2007A 1px;
+            border-radius: 3px;
+        }
+
+        .btn:hover {
+            background-color: white;
+            color: #E2007A;
+        }
+    </style>
 </head>
 <body>
-    <h1>Liste des outils pour les visites scolaires :</h1>
+    <img src="./logo_province.jpg" alt="">
+    <h1 style="color:#E2007A">Liste des outils pour les visites scolaires :</h1>
     <form>
-        <input type=button value="Open links" onclick="open_win()">
+        <input class="btn" type=button value="Open links" onclick="open_win()">
         </form>
     <ul>
         <li>
